# 12345

./: .gitignore  README.md  pyproject.toml  run_00_generate_ioi_data.py  run_01_fit_transports.py  run_02_clean_corrupt_obstruction.py  run_02b_obstruction_conflict_conditions.py  run_02c_multitoken_scalar_obstruction.py  run_02d_lowrank_residual_obstruction.py  run_02e_condition_matched_lowrank_obstruction.py  run_02f_whitened_lowrank_obstruction.py  run_02g_component_level_obstruction.py  run_02h_component_inspection_and_additive_tests.py  run_02i_standardized_component_score_validation.py  run_03_score_and_patch.py  run_03a_generate_factual_conflict_data.py  run_03b_score_factual_margins.py  run_03c_select_margin_matched_factual_pairs.py  run_03d_factual_margin_matched_obstruction.py  run_03e_factual_model_sweep.py
data/model_atlas/: model_feature_schema_v0.json  model_sources_v0.json  top_100_models_template.csv
docs/: geometry_of_model_space_v0.md  math_map_v0.md  model_family_atlas_v0.md  top_100_model_atlas_v0.md
figures/: math_map_v0_mermaid.md
notebooks/: 00_generate_ioi_data.ipynb
scripts/: build_model_space_projection.py
src/: __init__.py  baselines.py  cache.py  data_factual.py  data_ioi.py  germs.py  metrics.py  model.py  model_maps.py  obstruction.py  patching.py  plotting.py  response.py  transports.py
